Working color palette

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Color Palette Generator</title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
   </head>
   <body>
     <!-- File input to allow users to select an image file from their device -->
@@ -12,6 +13,8 @@
 
     <!-- Div to display the uploaded image -->
     <div id="display-file"></div>
+
+    <div id="div-continuous"></div>
 
   </body>  
 </html>
